--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SZABJJ - Equipe de Jiu-Jitsu</title>
+<!-- Favicons -->
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon-32x32.png" type="image/png" sizes="32x32">
+<link rel="icon" href="favicon-48x48.png" type="image/png" sizes="48x48">
+<link rel="icon" href="favicon-64x64.png" type="image/png" sizes="64x64">
+<link rel="apple-touch-icon" href="favicon-180x180.png">
+<link rel="icon" href="favicon-192x192.png" type="image/png" sizes="192x192">
+<link rel="icon" href="favicon-512x512.png" type="image/png" sizes="512x512">
+
+<!-- Cor da barra do navegador no celular -->
+<meta name="theme-color" content="#000000">
     <style>
         /* Cores da logo: Preto, Cinza, Vermelho, Branco, Amarelo e Azul */
         :root {
