--- a/index.html
+++ b/index.html
@@ -936,6 +936,8 @@
                     <a href="#fato-historico">Fato Histórico no Jiu-Jitsu Nilopolitano</a>
                     <a href="#familia-souza-livros">Souza além dos Tatames</a>
                     <a href="#faixas-pretas-mestre-mara">De alunos a faixas-pretas</a>
+                    <a href="#certificados-mestre-mara">Formação Acadêmica e Inclusão no Jiu-Jitsu</a>
+                    <a href="#mestres-szabjj-certificados">Reconhecimento Internacional</a>
                 </div>
             </aside>
 
@@ -994,6 +996,8 @@
 <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755618600/_MG_3182_bqsghs.jpg" alt="Foto de treino 16"></div>      
             </div>
 </p>
+</section>
+---
     <section id="faixas-pretas-mestre-mara">
   <h2>Faixas-pretas que iniciaram com a Mestre Mara 🥋</h2>
   <p>Nilópolis tem uma história viva no Jiu-Jitsu, marcada pelo pioneirismo da <strong>Mestre Mara</strong>, uma das primeiras a acreditar que a arte suave poderia transformar vidas e abrir caminhos dentro da cidade.</p>
@@ -1016,6 +1020,56 @@
                 <div class="slide"><iframe src="https://www.youtube.com/embed/Nn5nl1BeeXc" frameborder="0" allowfullscreen></iframe></div>
                 <div class="slide"><iframe src="https://www.youtube.com/embed/Dsv6sFyUqIg" frameborder="0" allowfullscreen></iframe></div>
 </div>     
+</section>
+---
+<section id="certificados-mestre-mara">
+  <h2>Formação Acadêmica e Inclusão no Jiu-Jitsu 🥋📚</h2>
+  
+  <p>A <strong>Mestre Mara</strong>, pioneira do Jiu-Jitsu em Nilópolis e referência da equipe SZABJJ, carrega não apenas a experiência de décadas nos tatames, mas também uma sólida formação acadêmica que amplia ainda mais sua capacidade de ensinar e transformar vidas.</p>
+  
+  <p>Entre seus certificados estão cursos voltados para a <strong>Educação Especial e Inclusiva</strong>, com reconhecimento oficial pelo Plano Estadual de Qualificação Profissional, fortalecendo a missão de tornar o Jiu-Jitsu acessível a todos.</p>
+  
+  <h3>🌟 O que esses certificados representam no Jiu-Jitsu</h3>
+  <ul>
+    <li>Capacitação para ensinar de forma inclusiva, respeitando as diferenças e necessidades de cada aluno;</li>
+    <li>Aprimoramento pedagógico que garante mais qualidade nas aulas de Jiu-Jitsu;</li>
+    <li>Compromisso com a formação integral, unindo técnica, disciplina e inclusão social;</li>
+    <li>Reconhecimento oficial de que o ensino vai além da luta: é também educação, cidadania e transformação.</li>
+  </ul>
+  
+  <h3>📜 Certificados</h3>
+  <p>Confira abaixo alguns dos certificados que reforçam a seriedade e a dedicação da Mestre Mara:</p>
+  
+  <div class="slideshow">
+    <div class="slide active">
+      <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756438830/Certificado2_xrrr9h.jpg" alt="Certificado Educação Especial - Mestre Mara">
+    </div>
+    <div class="slide">
+      <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756438829/Certificado1_znfuey.jpg" alt="Certificado Inclusão - Mestre Mara">
+    </div>
+  </div>
+  
+  <p>Essa formação mostra que o trabalho da Mestre Mara vai muito além do tatame: é um compromisso com a inclusão, o respeito e a construção de um Jiu-Jitsu verdadeiramente para todos.</p>
+</section>
+---
+<section id="mestres-szabjj-certificados">
+  <h2>Mestres da SZABJJ com Certificação e Reconhecimento Internacional 🌎🥋</h2>
+  
+  <p>Na <strong>SZABJJ</strong>, a tradição e a excelência no Jiu-Jitsu são garantidas por mestres que não apenas dedicaram suas vidas ao tatame, mas também buscaram a formação e a certificação oficial que atestam sua qualidade de ensino.</p>
+  
+  <p>Todos os mestres da nossa equipe são <strong>certificados e diplomados</strong>, com reconhecimento internacional, garantindo que o conhecimento transmitido dentro da academia esteja alinhado aos mais altos padrões do Jiu-Jitsu mundial.</p>
+  
+  <p>Essa certificação não é apenas um título, mas a comprovação de uma trajetória marcada por disciplina, estudo e compromisso em manter viva a essência da arte suave, sempre com credibilidade e responsabilidade.</p>
+  
+  <h3>📜 Nossos Diplomas</h3>
+  <p>Abaixo, você confere os diplomas que comprovam esse reconhecimento internacional:</p>
+  
+  <div class="slideshow">
+    <div class="slide active"><img src="URL_DO_DIPLOMA_1" alt="Diploma SZABJJ 1"></div>
+    <div class="slide"><img src="URL_DO_DIPLOMA_2" alt="Diploma SZABJJ 2"></div>
+    <div class="slide"><img src="URL_DO_DIPLOMA_3" alt="Diploma SZABJJ 3"></div>
+    <div class="slide"><img src="URL_DO_DIPLOMA_4" alt="Diploma SZABJJ 4"></div>
+  </div>
 </section>
 ---
 <section id="familia-souza-vale-tudo">
