--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
     <p>Essa caminhada não é apenas uma lembrança, mas sim um alicerce sólido que sustenta o presente.</p>
     
     <p>📸 Alguns registros de fotos e vídeos da família antes da SZABJJ:
-<div class="slideshow">
+
                 <div class="slideshow">
                 <div class="slide"><iframe src="https://www.youtube.com/embed/hYhqy7RMzzQ" frameborder="0" allowfullscreen></iframe></div>
                 <div class="slide"><iframe src="https://www.youtube.com/embed/CX4AQIP3osA" frameborder="0" allowfullscreen></iframe></div>
@@ -1035,7 +1035,7 @@
   
   <p>A <strong>Mestre Mara</strong>, pioneira do Jiu-Jitsu em Nilópolis e referência da equipe SZABJJ, carrega não apenas a experiência de décadas nos tatames, mas também uma sólida formação acadêmica que amplia ainda mais sua capacidade de ensinar e transformar vidas.</p>
   
-  <p>Entre seus certificados estão cursos voltados para a <strong>Educação Especial e Inclusiva</strong>, com reconhecimento oficial pelo Plano Estadual de Qualificação Profissional, fortalecendo a missão de tornar o Jiu-Jitsu acessível a todos.</p>
+  <p>Entre seus certificados estão cursos voltados para a <strong>Educação Especial, Inclusiva e Primeiros Socorros</strong>, com reconhecimento oficial pelo Plano Estadual de Qualificação Profissional, fortalecendo a missão de tornar o Jiu-Jitsu acessível a todos.</p>
   
   <h3>🌟 O que esses certificados representam no Jiu-Jitsu</h3>
   <ul>
@@ -1050,10 +1050,13 @@
   
   <div class="slideshow">
     <div class="slide active">
-      <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756438830/Certificado2_xrrr9h.jpg" alt="Certificado Educação Especial - Mestre Mara">
+      <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756438829/Certificado1_znfuey.jpg" alt="Certificado Educação Especial - Mestre Mara">
     </div>
     <div class="slide">
-      <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756438829/Certificado1_znfuey.jpg" alt="Certificado Inclusão - Mestre Mara">
+      <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756438830/Certificado2_xrrr9h.jpg" alt="Certificado Inclusão - Mestre Mara">
+    </div>
+    <div class="slide">
+      <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756522497/20250829_215743_rhmrhe.jpg" alt="Certificado Inclusão - Mestre Mara">
     </div>
   </div>
   
@@ -1076,7 +1079,7 @@
     <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756522483/20250829_212908_kqragb.jpg" alt="Diploma SZABJJ 1"></div>
     <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756522490/20250829_214818_bfw7hj.jpg" alt="Diploma SZABJJ 2"></div>
     <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756522483/20250829_183202_ante3h.jpg" alt="Diploma SZABJJ 3"></div>
-    <div class="slide"><img src="URL_DO_DIPLOMA_4" alt="Diploma SZABJJ 4"></div>
+
   </div>
 </section>
 ---
