--- a/index.html
+++ b/index.html
@@ -938,6 +938,7 @@
                     <a href="#faixas-pretas-mestre-mara">De alunos a faixas-pretas</a>
                     <a href="#certificados-mestre-mara">Formação Acadêmica e Inclusão no Jiu-Jitsu</a>
                     <a href="#mestres-szabjj-certificados">Reconhecimento Internacional</a>
+                    <a href="#linhagem-fadda-szabjj">Diplomas mestre Fadda</a>
                 </div>
             </aside>
 
@@ -1006,6 +1007,69 @@
 </p>
 </section>
 ---
+<section id="linhagem-fadda-szabjj">
+  <h2>📜 Diplomas Históricos Assinados pelo Grão-Mestre Oswaldo Fadda</h2>
+  <p>
+    Um dos maiores orgulhos da <strong>SZABJJ</strong> está na sua
+    <strong>linhagem direta com o lendário Grão-Mestre faixa vermelha 10º grau Oswaldo Fadda</strong>,
+    figura essencial para a expansão do Jiu-Jitsu no Brasil. 
+  </p>
+
+  <p>
+    Os Mestres <strong>Eduardo Souza</strong> e <strong>Mara Souza</strong> receberam seus
+    <strong>diplomas de faixa-preta assinados pelo próprio Fadda</strong>, um marco histórico que reforça a legitimidade,
+    a tradição e o reconhecimento internacional de nossa equipe.
+  </p>
+
+  <div class="slideshow">
+    <div class="slide active">
+      <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756579592/20250829_215856_vcnvbk_tmxwmb.jpg" alt="Diploma assinado por Oswaldo Fadda - Eduardo Souza">
+    </div>
+    <div class="slide">
+      <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756522496/20250829_215836_vosicl.jpg" alt="Diploma assinado por Oswaldo Fadda - Mara Souza">
+    </div>
+    <div class="slide">
+      <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756564902/4_graus_a1mlg0.jpg" alt="Diploma histórico SZABJJ">
+    </div>
+    <div class="slide">
+      <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756564903/Mara_Fada_cydq1z.jpg" alt="Diploma original assinado por Oswaldo Fadda">
+    </div>
+  </div>
+
+  <p>
+    Esses documentos não representam apenas uma graduação, mas sim a
+    <strong>validação de uma linhagem única</strong>, que conecta a SZABJJ diretamente às raízes do Jiu-Jitsu brasileiro,
+    garantindo que cada ensinamento transmitido nos tatames carregue a
+    <strong>essência da escola Fadda</strong>.
+  </p>
+</section>
+
+---
+    <section id="faixas-pretas-mestre-mara">
+  <h2>Faixas-pretas que iniciaram com a Mestre Mara 🥋</h2>
+  <p>Nilópolis tem uma história viva no Jiu-Jitsu, marcada pelo pioneirismo da <strong>Mestre Mara</strong>, uma das primeiras a acreditar que a arte suave poderia transformar vidas e abrir caminhos dentro da cidade.</p>
+  <p>Entre os frutos desse trabalho estão quatro nomes que hoje carregam a faixa-preta, mas que deram seus primeiros passos guiados por ela: <strong>Foice, Leandro, Cristiano e Serginho</strong>. Cada um deles representa não apenas uma conquista pessoal, mas também a continuidade de um legado iniciado pela mestre.</p>
+  <h3>🌟 Histórias marcadas no tatame</h3>
+  <ul>
+    <li><strong>Foice</strong>: conhecido pela garra e intensidade dentro do tatame, sempre motivado pela energia contagiante das aulas da Mestre Mara.</li>
+    <li><strong>Leandro</strong>: dono de um estilo técnico e sereno, sempre buscando a perfeição nos detalhes.</li>
+    <li><strong>Cristiano</strong>: trilhou um caminho de resiliência, inspirando outros alunos a acreditarem que com esforço também poderiam chegar à faixa-preta.</li>
+    <li><strong>Serginho</strong>: marcado pela lealdade e constância, cresceu no Jiu-Jitsu lado a lado com a família SZABJJ.</li>
+  </ul>
+  
+  <p>Esses quatro faixas-pretas não apenas conquistaram seus espaços no Jiu-Jitsu, mas também se tornaram referência para os mais novos, provando que a semente plantada pela Mestre Mara deu frutos fortes e duradouros.</p>
+
+  <h3>🎥 Relatos em vídeo</h3>
+  <p>A seguir, você confere relatos em vídeo desses faixas-pretas, que compartilham suas memórias, desafios e a importância de terem iniciado essa caminhada ao lado da Mestre Mara.</p>
+            <div class="slideshow">
+                <div class="slide"><iframe src="https://www.youtube.com/embed/33VpvRvZ1hg" frameborder="0" allowfullscreen></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/SL6c3sd-9FU" frameborder="0" allowfullscreen></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/Nn5nl1BeeXc" frameborder="0" allowfullscreen></iframe></div>
+                <div class="slide"><iframe src="https://www.youtube.com/embed/Dsv6sFyUqIg" frameborder="0" allowfullscreen></iframe></div>
+</div>     
+</section>
+---
+
     <section id="faixas-pretas-mestre-mara">
   <h2>Faixas-pretas que iniciaram com a Mestre Mara 🥋</h2>
   <p>Nilópolis tem uma história viva no Jiu-Jitsu, marcada pelo pioneirismo da <strong>Mestre Mara</strong>, uma das primeiras a acreditar que a arte suave poderia transformar vidas e abrir caminhos dentro da cidade.</p>
