--- a/index.html
+++ b/index.html
@@ -612,22 +612,23 @@
         </button>
     </header>
 
-<nav id="side-menu" class="side-menu">
-<a href="/szabjj/" data-tab="home" class="active">Início</a>
-<a href="/szabjj/linhagem" data-tab="linhagem">Linhagem</a>
-<a href="/szabjj/equipe" data-tab="equipe">Equipe</a>
-<a href="/szabjj/turmas" data-tab="turmas">Turmas e Horários</a>
-<a href="/szabjj/valores" data-tab="valores">Valores</a>
-<a href="/szabjj/como-chegar" data-tab="como-chegar">Como Chegar</a>
-<a href="/szabjj/galeria" data-tab="galeria">Galeria</a>
-<a href="/szabjj/avaliacoes" data-tab="avaliacoes">Avaliações</a>
-<a href="/szabjj/blog" data-tab="blog">Tatame em Palavras</a>
-<a href="/szabjj/redes" data-tab="redes">Redes Sociais</a>
-<a href="/szabjj/produtos" data-tab="produtos">Produtos</a>
-<a href="/szabjj/matricula" data-tab="matricula">Matrícula</a>
-<a href="/szabjj/apadrinhe-um-campeao" data-tab="apadrinhe-um-campeao">Apadrinhe um campeão</a>
-<a href="/szabjj/estudo" data-tab="estudo">Estudo</a>
-</nav>
+
+    <nav id="side-menu" class="side-menu">
+        <a href="#" data-tab="home" class="active">Início</a>
+        <a href="#" data-tab="linhagem">Linhagem</a>
+        <a href="#" data-tab="equipe">Equipe</a>
+        <a href="#" data-tab="turmas">Turmas e Horários</a>
+        <a href="#" data-tab="valores">Valores</a>
+        <a href="#" data-tab="como-chegar">Como Chegar</a>
+        <a href="#" data-tab="galeria">Galeria</a>
+        <a href="#" data-tab="avaliacoes">Avaliações</a>
+        <a href="#" data-tab="blog">Tatame em Palavras</a>
+        <a href="#" data-tab="redes">Redes Sociais</a>
+        <a href="#" data-tab="produtos">Produtos</a>
+        <a href="#" data-tab="matricula">Matrícula</a>
+        <a href="#" data-tab="apadrinhe-um-campeao">Apadrinhe um campeão</a>
+        <a href="#" data-tab="estudo">Estudo</a>
+    </nav>
 
    <div class="content">
 
@@ -639,18 +640,6 @@
                 <div class="taggbox" style="width:100%;height:100%;overflow:auto;" data-widget-id="296965" data-website="1"></div>
                 <script src="https://widget.taggbox.com/embed.min.js" type="text/javascript"></script>
             </div>
-                <div id="home" class="tab-content active">
-        <div id="home-page">
-            <h2 class="titulo-impacto">CT Souza Jiu Jitsu Nilópolis</h2>
-            <iframe width="315" height="560" src="https://www.youtube.com/embed/_iGMG7hG5eU" 
-                title="YouTube Short video player" frameborder="0" 
-                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-            </iframe>
-            <div class="taggbox" style="width:100%;height:100%;overflow:auto;" 
-                data-widget-id="296965" data-website="1"></div>
-            <script src="https://widget.taggbox.com/embed.min.js" type="text/javascript"></script>
-        </div>
         </div>
 
         <div id="linhagem" class="tab-content">
@@ -2001,6 +1990,7 @@ target.scrollIntoView({ behavior: "smooth" });
 
 </body>
 </html>
+
 
 
 
