--- a/redes.html
+++ b/redes.html
@@ -45,6 +45,7 @@
 
   <main>
     <section>
+      <div id="redes-sociais-content">
  <h2>Redes Sociais e Grupos</h2>
                 <p>Siga-nos para acompanhar a rotina de treinos, novidades e eventos!</p>
                 <h3>Redes Sociais</h3>
@@ -59,6 +60,7 @@
                     <li><a href="https://chat.whatsapp.com/Eq15xFyUGdhJK1b1EDbleG" target="_blank" class="whatsapp-group-link">Grupo de Alunos Kids</a></li>
                     <li><a href="https://chat.whatsapp.com/EB83iVN81ZJAgXO2ND3Uw5" target="_blank" class="whatsapp-group-link">Grupo de Alunos Mirim</a></li>
                 </ul>
+        </div>
     </section>
   </main>
 
