--- a/blog.html
+++ b/blog.html
@@ -5,14 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tatame em Palavras – SZABJJ Nilópolis</title>
   <link rel="stylesheet" href="style.css">
-<!-- Favicons -->
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-<link rel="icon" href="favicon-32x32.png" type="image/png" sizes="32x32">
-<link rel="icon" href="favicon-48x48.png" type="image/png" sizes="48x48">
-<link rel="icon" href="favicon-64x64.png" type="image/png" sizes="64x64">
-<link rel="apple-touch-icon" href="favicon-180x180.png">
-<link rel="icon" href="favicon-192x192.png" type="image/png" sizes="192x192">
-<link rel="icon" href="favicon-512x512.png" type="image/png" sizes="512x512">
 </head>
 <body>
 
@@ -94,6 +86,7 @@
                 </div>
             </aside>
             <main>
+<h1 class="titulo-impacto">Blog oficial da equipe</h1>
                 <section id="espirito-lutador">
     <h2>ESPÍRITO DO LUTADOR 🥋🔥</h2>
     <p>O verdadeiro espírito do lutador vai além da vitória dentro do tatame. Ele é formado por valores, disciplina e a busca constante pelo autoconhecimento. No Jiu-Jitsu e em todas as artes marciais, a evolução não se mede apenas por graduações, mas principalmente pela transformação interior que cada praticante conquista ao longo da jornada.</p>
