--- a/galeria.html
+++ b/galeria.html
@@ -5,14 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galeria – SZABJJ Nilópolis</title>
   <link rel="stylesheet" href="style.css">
-<!-- Favicons -->
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-<link rel="icon" href="favicon-32x32.png" type="image/png" sizes="32x32">
-<link rel="icon" href="favicon-48x48.png" type="image/png" sizes="48x48">
-<link rel="icon" href="favicon-64x64.png" type="image/png" sizes="64x64">
-<link rel="apple-touch-icon" href="favicon-180x180.png">
-<link rel="icon" href="favicon-192x192.png" type="image/png" sizes="192x192">
-<link rel="icon" href="favicon-512x512.png" type="image/png" sizes="512x512">
 </head>
 <body>
 
@@ -45,7 +37,7 @@
 
   <main>
     <section>
-      <h1>Galeria</h1>
+      <h1 class="titulo-impacto">SZA FOCO SPORTS</h1>
                   <h2 style="padding: 1.5rem 1rem;">Galeria de Fotos e Vídeos</h2>
             <p style="padding: 0 1rem;">Confira alguns dos melhores momentos dos nossos treinos e competições!</p>
 
