--- a/linhagem.html
+++ b/linhagem.html
@@ -5,14 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Linhagem – SZABJJ Nilópolis</title>
   <link rel="stylesheet" href="style.css">
-<!-- Favicons -->
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-<link rel="icon" href="favicon-32x32.png" type="image/png" sizes="32x32">
-<link rel="icon" href="favicon-48x48.png" type="image/png" sizes="48x48">
-<link rel="icon" href="favicon-64x64.png" type="image/png" sizes="64x64">
-<link rel="apple-touch-icon" href="favicon-180x180.png">
-<link rel="icon" href="favicon-192x192.png" type="image/png" sizes="192x192">
-<link rel="icon" href="favicon-512x512.png" type="image/png" sizes="512x512">
 </head>
 <body>
 
@@ -45,6 +37,7 @@
 
   <main>
     <section>
+<h1 class="titulo-impacto">História</h1>
             <h2>A Linhagem da SZABJJ</h2>
             <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755374405/3_gp1w9p.jpg" alt="Foto da Linhagem" style="max-width: 100%; height: auto; margin-bottom: 1rem;">
             <p>A história do Jiu-Jitsu Brasileiro é marcada por diferentes personagens que ajudaram a moldar e expandir essa arte marcial no país.</p>
