--- a/redes.html
+++ b/redes.html
@@ -5,14 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Redes Sociais – SZABJJ Nilópolis</title>
   <link rel="stylesheet" href="style.css">
-<!-- Favicons -->
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-<link rel="icon" href="favicon-32x32.png" type="image/png" sizes="32x32">
-<link rel="icon" href="favicon-48x48.png" type="image/png" sizes="48x48">
-<link rel="icon" href="favicon-64x64.png" type="image/png" sizes="64x64">
-<link rel="apple-touch-icon" href="favicon-180x180.png">
-<link rel="icon" href="favicon-192x192.png" type="image/png" sizes="192x192">
-<link rel="icon" href="favicon-512x512.png" type="image/png" sizes="512x512">
 </head>
 <body>
 
@@ -45,7 +37,8 @@
 
   <main>
     <section>
- <h2>Redes Sociais e Grupos</h2>
+<div id="redes-sociais-content">
+<h1 class="titulo-impacto">Redes Sociais e Grupos</h1>
                 <p>Siga-nos para acompanhar a rotina de treinos, novidades e eventos!</p>
                 <h3>Redes Sociais</h3>
                 <ul>
@@ -59,6 +52,7 @@
                     <li><a href="https://chat.whatsapp.com/Eq15xFyUGdhJK1b1EDbleG" target="_blank" class="whatsapp-group-link">Grupo de Alunos Kids</a></li>
                     <li><a href="https://chat.whatsapp.com/EB83iVN81ZJAgXO2ND3Uw5" target="_blank" class="whatsapp-group-link">Grupo de Alunos Mirim</a></li>
                 </ul>
+</div>
     </section>
   </main>
 
