--- a/apadrinhe.html
+++ b/apadrinhe.html
@@ -51,30 +51,29 @@ Dá a esses jovens a chance de viver experiências que podem mudar suas vidas.
 O Jiu-Jitsu já mostrou a eles valores como respeito, disciplina e superação. Agora, com sua ajuda, podemos dar o próximo passo: levar esses campeões para competir e mostrar todo o potencial que carregam.
 
 Conto com você para ser parte dessa vitória!Qualquer valor é bem-vindo e fará uma enorme diferença.</p>
-            <div class="iframe-container">
-
-                <iframe src="https://caixinhadedoacao.vakinha.com.br/?campaignId=5696845&buttonColor=e74c3c&headerColor=e74c3c" style="width: 100%; height: 500px; border: unset"></iframe>
-
+<div class="iframe-container">
+    <iframe src="https://caixinhadedoacao.vakinha.com.br/?campaignId=5696845&buttonColor=e74c3c&headerColor=e74c3c" frameborder="0"></iframe>
+</div>
 <div class="slideshow">
                 <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756230090/20250826_142512_r7zvre.jpg" alt="Foto de competição"></div>
-                <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756230090/20250825_211615_ekw3th.jpg" alt="Foto de competição"></div>
- <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464899/Julia_10_gjqdgt.jpg" alt="Foto de competição"></div>
- <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464915/Marcos_8_nsateg.jpg" alt="Foto de competição"></div>
- <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464923/Matheus_Rogrigues_4_elcgoc.jpg" alt="Foto de competição"></div>
- <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756233040/20250823_110446_opwgrp.jpg" alt="Foto de competição"></div>
- <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755469023/_MG_0367_kuh57u.jpg" alt="Foto de competição"></div>
- <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755465289/Nathalie_70_ndwjq5.jpg" alt="Foto de competição"></div>
- <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464906/Julia_30_vibd3j.jpg" alt="Foto de competição"></div>
- <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464928/Matheus_Rogrigues_7_n7umqp.jpg" alt="Foto de competição"></div>
-<div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464913/Marcos_4_bsnc5h.jpg" alt="Foto de competição"></div>
-<div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464661/Matheus_Costa_16_vzxpql.jpg" alt="Foto de competição"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756230090/20250825_211615_ekw3th.jpg" alt="Foto de competição"></div>
+ <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464899/Julia_10_gjqdgt.jpg" alt="Foto de competição"></div>
+ <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464915/Marcos_8_nsateg.jpg" alt="Foto de competição"></div>
+ <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464923/Matheus_Rogrigues_4_elcgoc.jpg" alt="Foto de competição"></div>
+ <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756233040/20250823_110446_opwgrp.jpg" alt="Foto de competição"></div>
+ <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755469023/_MG_0367_kuh57u.jpg" alt="Foto de competição"></div>
+ <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755465289/Nathalie_70_ndwjq5.jpg" alt="Foto de competição"></div>
+ <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464906/Julia_30_vibd3j.jpg" alt="Foto de competição"></div>
+ <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464928/Matheus_Rogrigues_7_n7umqp.jpg" alt="Foto de competição"></div>
+<div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464913/Marcos_4_bsnc5h.jpg" alt="Foto de competição"></div>
+<div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755464661/Matheus_Costa_16_vzxpql.jpg" alt="Foto de competição"></div>
                 <div class="slide"><iframe src="https://www.youtube.com/embed/lFKb-ypiVIc" frameborder="0" allowfullscreen></iframe></div>
 <div class="slide"><iframe src="https://www.youtube.com/embed/bRt89TqhgQE" frameborder="0" allowfullscreen></iframe></div>
 <div class="slide"><iframe src="https://www.youtube.com/embed/oysltsf5fyI" frameborder="0" allowfullscreen></iframe></div>
 <div class="slide"><iframe src="https://www.youtube.com/embed/M31FfErCU5s" frameborder="0" allowfullscreen></iframe></div>
     </section>
   </main>
-
+  
   <footer>
     <p>Endereço: Antônio Félix, 427, Nilópolis | WhatsApp: 5521982481691</p>
     <p>© 2025 SZABJJ. Todos os direitos reservados. | <a href="sitemap.xml">🗺️ Sitemap</a></p>
