--- a/apadrinhe.html
+++ b/apadrinhe.html
@@ -51,7 +51,7 @@ Dá a esses jovens a chance de viver experiências que podem mudar suas vidas.
 O Jiu-Jitsu já mostrou a eles valores como respeito, disciplina e superação. Agora, com sua ajuda, podemos dar o próximo passo: levar esses campeões para competir e mostrar todo o potencial que carregam.
 
 Conto com você para ser parte dessa vitória!Qualquer valor é bem-vindo e fará uma enorme diferença.</p>
-<div class="iframe-container">
+<div class="vakinha-container">
     <iframe src="https://caixinhadedoacao.vakinha.com.br/?campaignId=5696845&buttonColor=e74c3c&headerColor=e74c3c" frameborder="0"></iframe>
 </div>
 <div class="slideshow">
