--- a/equipe.html
+++ b/equipe.html
@@ -1,47 +1,76 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Equipe – SZABJJ Nilópolis</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Conheça a história da equipe SZABJJ Nilópolis, liderada pelo Mestre Eduardo Souza. Descubra a tradição familiar e o impacto social do Jiu-Jitsu na cidade.">
+
+    <link rel="preload" href="style.css" as="style">
+    <link rel="preload" href="script.js" as="script">
+    <link rel="preload" href="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375583/IMG-20241202-WA0014_b35cck.jpg" as="image">
+    <link rel="preload" href="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375065/Screenshot_20250816_170640_Gallery_kh2aod.jpg" as="image">
+    <link rel="preload" href="https://res.cloudinary.com/ddozlstmp/image/upload/v1755374406/IMG_20211113_110128904_xsvlfi.jpg" as="image">
+    <link rel="preload" href="https://res.cloudinary.com/ddozlstmp/image/upload/v1755376481/IMG-20241202-WA0014_1_i6ltva.jpg" as="image">
+    <link rel="preload" href="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375597/IMG_2582_zrvwdx.jpg" as="image">
+    <link rel="preload" href="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375859/Screenshot_20250816_172243_Instagram_snz5dy.jpg" as="image">
+
+    <title>Equipe – SZABJJ Nilópolis</title>
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon-32x32.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="favicon-48x48.png" type="image/png" sizes="48x48">
+    <link rel="icon" href="favicon-64x64.png" type="image/png" sizes="64x64">
+    <link rel="apple-touch-icon" href="favicon-180x180.png">
+    <link rel="icon" href="favicon-192x192.png" type="image/png" sizes="192x192">
+    <link rel="icon" href="favicon-512x512.png" type="image/png" sizes="512x512">
+
+    <link rel="stylesheet" href="style.css">
+
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
+
 <body>
 
-  <header>
-    <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755376968/lv_0_20250816174224_rlcqb5.gif" alt="Logo SZABJJ">
-    <p>A Arte Suave com Disciplina e Respeito</p>
-  <button class="menu-toggle">
-    <span class="hamburger-icon"></span>
-    <span class="hamburger-icon"></span>
-    <span class="hamburger-icon"></span>
-  </button>
-  </header>
+    <header>
+        <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755376968/lv_0_20250816174224_rlcqb5.gif" alt="Logo SZABJJ" width="250" height="250">
+        <p>A Arte Suave com Disciplina e Respeito</p>
+        <button class="menu-toggle" aria-label="Abrir e fechar menu de navegação">
+            <span class="hamburger-icon"></span>
+            <span class="hamburger-icon"></span>
+            <span class="hamburger-icon"></span>
+        </button>
+        <a href="login.html" class="login-button">Login</a>
+    </header>
 
-  <nav id="side-menu" class="side-menu">
-    <a href="index.html">Início</a>
-    <a href="linhagem.html">Linhagem</a>
-    <a href="equipe.html" class="active">Equipe</a>
-    <a href="turmas.html">Turmas e Horários</a>
-    <a href="valores.html">Valores</a>
-    <a href="como-chegar.html">Como Chegar</a>
-    <a href="galeria.html">Galeria</a>
-    <a href="avaliacoes.html">Avaliações</a>
-    <a href="blog.html">Tatame em Palavras</a>
-    <a href="redes.html">Redes Sociais</a>
-    <a href="produtos.html">Produtos</a>
-    <a href="matricula.html">Matrícula</a>
-    <a href="apadrinhe.html">Apadrinhe um campeão</a>
-    <a href="estudo.html">Estudo</a>
-  </nav>
+    <nav id="side-menu" class="side-menu">
+        <a href="index.html">Início</a>
+        <a href="linhagem.html">Linhagem</a>
+        <a href="equipe.html" class="active">Equipe</a>
+        <a href="turmas.html">Turmas e Horários</a>
+        <a href="valores.html">Valores</a>
+        <a href="como-chegar.html">Como Chegar</a>
+        <a href="galeria.html">Galeria</a>
+        <a href="avaliacoes.html">Avaliações</a>
+        <a href="blog.html">Tatame em Palavras</a>
+        <a href="redes.html">Redes Sociais</a>
+        <a href="produtos.html">Produtos</a>
+        <a href="matricula.html">Matrícula</a>
+        <a href="apadrinhe.html">Apadrinhe um campeão</a>
+        <a href="estudo.html">Estudo</a>
+        <a href="bolsista.html">Bolsistas</a>
+    </nav>
 
-  <main>
-    <section>
-<h1 class="titulo-impacto">Sobre a SZABJJ</h1>
- <h2>Biografia da Equipe</h2>
-            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375583/IMG-20241202-WA0014_b35cck.jpg" alt="Foto da Biografia" style="max-width: 100%; height: auto; margin-bottom: 1rem;">
+    <main>
+        <section>
+            <h1 class="titulo-impacto">Sobre a SZABJJ</h1>
+            <h2>Biografia da Equipe</h2>
+
+            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375583/IMG-20241202-WA0014_b35cck.jpg" alt="Foto da Biografia Mestre Eduardo Souza" style="max-width: 100%; height: auto; margin-bottom: 1rem;" width="800" height="600" loading="lazy">
+
             <p>
-                Liderado pelo incansável Mestre Eduardo Souza, uma equipe formada por integrantes da segunda maior família de mestres, professores e praticantes de jiu-jitsu brasileiro(Família Souza Jiu-Jitsu), precursores da arte suave na baixada e principalmente em Nilópolis.
+                Liderado pelo incansável Mestre Eduardo Souza, uma equipe formada por integrantes da segunda maior família de mestres, professores e praticantes de jiu-jitsu brasileiro (Família Souza Jiu-Jitsu), precursores da arte suave na baixada e principalmente em Nilópolis.
                 Todos diplomados e reconhecidos internacionalmente (IPJJF).
                 A família Souza tem tradição e grande impacto social na cidade de Nilópolis. O que poucos sabem — ou fingem esquecer — é que foi ele Eduardo Souza o primeiro a ousar ensinar Jiu-Jitsu na cidade, numa época em que ninguém sequer sabia pronunciar "arte suave".
             </p>
@@ -54,11 +83,11 @@
             <p>
                 A partir dali, os cinco irmãos — Gustavo, Raphael, Eduardo, Ismael e Israel — colecionaram títulos em campeonatos mundiais, brasileiros e estaduais. Mas não se contentaram em brilhar apenas nos tatames. Eles espalharam os treinos de Jiu-Jitsu pela Baixada Fluminense como uma epidemia de disciplina e superação.
             </p>
-            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375065/Screenshot_20250816_170640_Gallery_kh2aod.jpg" alt="Irmãos Souza" style="max-width: 100%; height: auto; margin-bottom: 1rem;">
+            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375065/Screenshot_20250816_170640_Gallery_kh2aod.jpg" alt="Irmãos Souza em foto histórica" style="max-width: 100%; height: auto; margin-bottom: 1rem;" width="800" height="533" loading="lazy">
             <p>
                 Eduardo e Gilce Mara Souza, pioneiros do jiu-jitsu em Nilópolis, enfrentaram preconceito, descrédito e dificuldades. Deram aulas na sala da própria casa, em escolas, clubes de bairro e até mesmo nas ruas. Realizaram torneios improvisados, foram desafiados por lutadores de outras artes marciais e provaram a eficácia do Jiu-Jitsu.
             </p>
-            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755374406/IMG_20211113_110128904_xsvlfi.jpg" alt="Eduardo e Gilce Mara Souza" style="max-width: 100%; height: auto; margin-bottom: 1rem;">
+            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755374406/IMG_20211113_110128904_xsvlfi.jpg" alt="Mestre Eduardo e Mestra Gilce Mara Souza" style="max-width: 100%; height: auto; margin-bottom: 1rem;" width="800" height="600" loading="lazy">
             <p>
                 Os irmãos mais novos que treinaram durante um bom tempo com o mestre também deixaram a cidade.
             </p>
@@ -75,13 +104,13 @@
                 <li>Multicampeões</li>
             </ul>
             <p>
-                Atualmente Eduardo Souza é faixa vermelha e branca 8º grau (segunda maior graduação do jiu-jitsubrasileiro).
+                Atualmente Eduardo Souza é faixa vermelha e branca 8º grau (segunda maior graduação do jiu-jitsu brasileiro).
             </p>
-             <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755376481/IMG-20241202-WA0014_1_i6ltva.jpg" alt="Mestre Eduardo Souza Faixa Vermelha e Branca" style="max-width: 100%; height: auto; margin-bottom: 1rem;">
+            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755376481/IMG-20241202-WA0014_1_i6ltva.jpg" alt="Mestre Eduardo Souza Faixa Vermelha e Branca" style="max-width: 100%; height: auto; margin-bottom: 1rem;" width="800" height="600" loading="lazy">
             <p>
                 Gilce Mara Souza, a primeira mulher faixa preta de Nilópolis, rompeu barreiras e se tornou uma das poucas mulheres no mundo a atingir o 7º grau como Mestra.
             </p>
-            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375597/IMG_2582_zrvwdx.jpg" alt="Mestra Gilce Mara Souza" style="max-width: 100%; height: auto; margin-bottom: 1rem;">
+            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375597/IMG_2582_zrvwdx.jpg" alt="Mestra Gilce Mara Souza" style="max-width: 100%; height: auto; margin-bottom: 1rem;" width="800" height="600" loading="lazy">
             <p>
                 E isso é só a primeira geração.
             </p>
@@ -91,19 +120,19 @@
             <p>
                 Se você ainda não conhece o CT SZA BJJ, talvez seja hora de conhecer essa equipe que tem vivência, tradição e autoridade para ensinar o que você e seus filhos precisam para vencer nos tatames e na vida.
             </p>
-            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375859/Screenshot_20250816_172243_Instagram_snz5dy.jpg" alt="Foto da Equipe" style="max-width: 100%; height: auto; margin-bottom: 1rem;">
-       
-    </section>
-  </main>
+            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375859/Screenshot_20250816_172243_Instagram_snz5dy.jpg" alt="Foto da Equipe SZABJJ" style="max-width: 100%; height: auto; margin-bottom: 1rem;" width="800" height="450" loading="lazy">
+        </section>
+    </main>
 
-  <footer>
-    <p>Endereço: Antônio Félix, 427, Nilópolis | WhatsApp: 5521982481691</p>
-    <p>© 2025 SZABJJ. Todos os direitos reservados. | <a href="sitemap.xml">🗺️ Sitemap</a></p>
-  </footer>
-    <a href="https://api.whatsapp.com/send?phone=5521982481691&text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20as%20aulas%20de%20jiu-jitsu%20da%20equipe%20SZABJJ.%20Poderiam%20me%20ajudar?" target="_blank" class="whatsapp-button">
+    <footer>
+        <p>Endereço: Antônio Félix, 427, Nilópolis | WhatsApp: 5521982481691</p>
+        <p>© 2025 SZABJJ. Todos os direitos reservados. | <a href="sitemap.xml">🗺️ Sitemap</a></p>
+    </footer>
+    <a href="https://api.whatsapp.com/send?phone=5521982481691&text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20as%20aulas%20de%20jiu-jitsu%20da%20equipe%20SZABJJ.%20Poderiam%20me%20ajudar?"
+        target="_blank" class="whatsapp-button" aria-label="Fale conosco via WhatsApp">
         WhatsApp
-    </a>  
+    </a>
 
-  <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
