--- a/linhagem.html
+++ b/linhagem.html
@@ -1,45 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Linhagem – SZABJJ Nilópolis</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Descubra a rica linhagem do Jiu-Jitsu Brasileiro e a história da SZABJJ Nilópolis, desde Mestre Oswaldo Fadda até os dias atuais. Conheça nossos mestres Eduardo Souza e Mara Souza.">
+
+    <link rel="preload" href="style.css" as="style">
+    <link rel="preload" href="script.js" as="script">
+    <link rel="preload" href="https://res.cloudinary.com/ddozlstmp/image/upload/v1755376968/lv_0_20250816174224_rlcqb5.gif" as="image">
+    <link rel="preload" href="https://res.cloudinary.com/ddozlstmp/image/upload/v1755374405/3_gp1w9p.jpg" as="image">
+    <link rel="preload" href="https://res.cloudinary.com/ddozlstmp/image/upload/v1756326218/Linhagem_1_pza0py.jpg" as="image">
+    
+    <title>Linhagem – SZABJJ Nilópolis</title>
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon-32x32.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="favicon-48x48.png" type="image/png" sizes="48x48">
+    <link rel="icon" href="favicon-64x64.png" type="image/png" sizes="64x64">
+    <link rel="apple-touch-icon" href="favicon-180x180.png">
+    <link rel="icon" href="favicon-192x192.png" type="image/png" sizes="192x192">
+    <link rel="icon" href="favicon-512x512.png" type="image/png" sizes="512x512">
+
+    <link rel="stylesheet" href="style.css">
+
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
+
 <body>
 
-  <header>
-    <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755376968/lv_0_20250816174224_rlcqb5.gif" alt="Logo SZABJJ">
-    <p>A Arte Suave com Disciplina e Respeito</p>
-  <button class="menu-toggle">
-    <span class="hamburger-icon"></span>
-    <span class="hamburger-icon"></span>
-    <span class="hamburger-icon"></span>
-  </button>
-  </header>
+    <header>
+        <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755376968/lv_0_20250816174224_rlcqb5.gif" alt="Logo SZABJJ" width="250" height="250">
+        <p>A Arte Suave com Disciplina e Respeito</p>
+        <button class="menu-toggle" aria-label="Abrir e fechar menu de navegação">
+            <span class="hamburger-icon"></span>
+            <span class="hamburger-icon"></span>
+            <span class="hamburger-icon"></span>
+        </button>
+        <a href="login.html" class="login-button">Login</a>
+    </header>
 
-  <nav id="side-menu" class="side-menu">
-    <a href="index.html">Início</a>
-    <a href="linhagem.html" class="active">Linhagem</a>
-    <a href="equipe.html">Equipe</a>
-    <a href="turmas.html">Turmas e Horários</a>
-    <a href="valores.html">Valores</a>
-    <a href="como-chegar.html">Como Chegar</a>
-    <a href="galeria.html">Galeria</a>
-    <a href="avaliacoes.html">Avaliações</a>
-    <a href="blog.html">Tatame em Palavras</a>
-    <a href="redes.html">Redes Sociais</a>
-    <a href="produtos.html">Produtos</a>
-    <a href="matricula.html">Matrícula</a>
-    <a href="apadrinhe.html">Apadrinhe um campeão</a>
-    <a href="estudo.html">Estudo</a>
-  </nav>
+    <nav id="side-menu" class="side-menu">
+        <a href="index.html">Início</a>
+        <a href="linhagem.html" class="active">Linhagem</a>
+        <a href="equipe.html">Equipe</a>
+        <a href="turmas.html">Turmas e Horários</a>
+        <a href="valores.html">Valores</a>
+        <a href="como-chegar.html">Como Chegar</a>
+        <a href="galeria.html">Galeria</a>
+        <a href="avaliacoes.html">Avaliações</a>
+        <a href="blog.html">Tatame em Palavras</a>
+        <a href="redes.html">Redes Sociais</a>
+        <a href="produtos.html">Produtos</a>
+        <a href="matricula.html">Matrícula</a>
+        <a href="apadrinhe.html">Apadrinhe um campeão</a>
+        <a href="estudo.html">Estudo</a>
+        <a href="bolsista.html">Bolsistas</a>
+    </nav>
 
-  <main>
-    <section>
-<h1 class="titulo-impacto">História</h1>
+    <main>
+        <section>
+            <h1 class="titulo-impacto">História</h1>
             <h2>A Linhagem da SZABJJ</h2>
-            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755374405/3_gp1w9p.jpg" alt="Foto da Linhagem" style="max-width: 100%; height: auto; margin-bottom: 1rem;">
+            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755374405/3_gp1w9p.jpg" alt="Foto da Linhagem de Mestre Oswaldo Fadda" style="max-width: 100%; height: auto; margin-bottom: 1rem;" width="800" height="600" loading="lazy">
             <p>A história do Jiu-Jitsu Brasileiro é marcada por diferentes personagens que ajudaram a moldar e expandir essa arte marcial no país.</p>
             <p>Em 1908, o Japão enviou mestres ao Brasil, entre eles Sada Miyako, que realizou a primeira demonstração pública de Jiu-Jitsu, e alguns anos depois Mitsuyo Maeda, o Conde Koma, que se tornou o maior difusor da arte. Maeda ficou famoso pelos inúmeros desafios vencidos, que mostravam a eficácia do Jiu-Jitsu. Entre seus discípulos estavam os Gracie, que popularizaram o Jiu-Jitsu entre a elite carioca, mas também outros alunos que seguiram caminhos diferentes.</p>
             <p>Um desses alunos foi Luiz França, que aprendeu diretamente com Maeda e levou o Jiu-Jitsu para além do círculo dos Gracie. França ensinava tanto nas Forças Armadas quanto para pessoas comuns, ajudando a espalhar a arte de forma independente.</p>
@@ -47,18 +71,19 @@
             <p>Graças a Luiz França e Oswaldo Fadda, o Jiu-Jitsu ganhou um caráter popular, democrático e acessível, espalhando-se por diferentes regiões e se consolidando como uma das maiores artes marciais do mundo.</p>
             <p>Dentro dessa tradição estão os atuais representantes da SZABJJ (Souza Jiu-Jitsu Brasileiro), os mestres Eduardo Souza e Mara Souza, ambos graduados pelas mãos do próprio Mestre Oswaldo Fadda. A equipe nasceu com o compromisso de manter vivos os valores transmitidos por essa linhagem: respeito, técnica e família.</p>
             <p>Hoje, a SZABJJ continua expandindo esse legado, levando o Jiu-Jitsu para novas gerações e honrando a memória de todos que ajudaram a construir essa arte no Brasil.</p>
-            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756326218/Linhagem_1_pza0py.jpg" alt="Foto da Linhagem" style="max-width: 100%; height: auto; margin-bottom: 1rem;">
-    </section>
-  </main>
+            <img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756326218/Linhagem_1_pza0py.jpg" alt="Foto dos Mestres Eduardo e Mara Souza" style="max-width: 100%; height: auto; margin-bottom: 1rem;" width="800" height="600" loading="lazy">
+        </section>
+    </main>
 
-  <footer>
-    <p>Endereço: Antônio Félix, 427, Nilópolis | WhatsApp: 5521982481691</p>
-    <p>© 2025 SZABJJ. Todos os direitos reservados. | <a href="sitemap.xml">🗺️ Sitemap</a></p>
-  </footer>
-    <a href="https://api.whatsapp.com/send?phone=5521982481691&text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20as%20aulas%20de%20jiu-jitsu%20da%20equipe%20SZABJJ.%20Poderiam%20me%20ajudar?" target="_blank" class="whatsapp-button">
+    <footer>
+        <p>Endereço: Antônio Félix, 427, Nilópolis | WhatsApp: 5521982481691</p>
+        <p>© 2025 SZABJJ. Todos os direitos reservados. | <a href="sitemap.xml">🗺️ Sitemap</a></p>
+    </footer>
+    <a href="https://api.whatsapp.com/send?phone=5521982481691&text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20as%20aulas%20de%20jiu-jitsu%20da%20equipe%20SZABJJ.%20Poderiam%20me%20ajudar?"
+        target="_blank" class="whatsapp-button" aria-label="Fale conosco via WhatsApp">
         WhatsApp
-    </a>  
+    </a>
 
-  <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
