--- a/produtos.html
+++ b/produtos.html
@@ -67,12 +67,12 @@
 
             <h3 style="padding: 0 1rem;">Camisas e Kimonos</h3>
             <div class="slideshow">
-                <div class="slide active"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755439284/WhatsApp_Image_2025-08-17_at_10.48.13_ezx1iu.jpg" alt="Camisa SZABJJ" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755439284/WhatsApp_Image_2025-08-17_at_10.52.55_zmj62v.jpg" alt="Kimonos SZABJJ 1" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755439284/WhatsApp_Image_2025-08-17_at_10.52.56_v4t4cw.jpg" alt="Kimonos SZABJJ 2" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1755439284/WhatsApp_Image_2025-08-17_at_10.52.56_1_t3uwvs.jpg" alt="Kimonos SZABJJ 3" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756211596/IMG_20250826_092743_dckwem.jpg" alt="Kimonos SZABJJ 4" width="600" height="400" loading="lazy"></div>
-                <div class="slide"><img src="https://res.cloudinary.com/ddozlstmp/image/upload/v1756211609/IMG_20250826_092637_cxgj6k.jpg" alt="Kimonos SZABJJ 5" width="600" height="400" loading="lazy"></div>
+                <div class="slide active"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758650743/IMG-20250603-WA0016_tnhim0.jpg" alt="Camisa SZABJJ" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758650745/IMG-20250405-WA0012_ucjojw.jpg" alt="Kimonos SZABJJ 1" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758650746/IMG-20250214-WA0067_egqt5j.jpg" alt="Kimonos SZABJJ 1" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758650744/IMG-20250214-WA0066_auipgg.jpg" alt="Kimonos SZABJJ 2" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758650744/IMG_20250826_092743_uwszvs.jpg" alt="Kimonos SZABJJ 3" width="600" height="400" loading="lazy"></div>
+                <div class="slide"><img src="https://res.cloudinary.com/dpvgy4bgu/image/upload/v1758650744/IMG_20250826_092637_knpamy.jpg" alt="Kimonos SZABJJ 4" width="600" height="400" loading="lazy"></div>
                 <div class="slide">
                     <iframe width="100%" height="auto" src="https://www.youtube.com/embed/VpTMYI5XQcQ" title="Vídeo promocional de Kimonos SZABJJ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
                 </div>
