--- a/equipe.html
+++ b/equipe.html
@@ -16,7 +16,7 @@
     <link rel="preload" href="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375597/IMG_2582_zrvwdx.jpg" as="image">
     <link rel="preload" href="https://res.cloudinary.com/ddozlstmp/image/upload/v1755375859/Screenshot_20250816_172243_Instagram_snz5dy.jpg" as="image">
 
-    <title>Equipe – SZABJJ Nilópolis</title>
+    <title>Sobre a SZA BJJ – SZABJJ Nilópolis</title>
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon-32x32.png" type="image/png" sizes="32x32">
@@ -47,7 +47,7 @@
     <nav id="side-menu" class="side-menu">
         <a href="index.html">Início</a>
         <a href="linhagem.html">Linhagem</a>
-        <a href="equipe.html" class="active">Equipe</a>
+        <a href="equipe.html" class="active">Sobre a SZABJJ</a>
         <a href="turmas.html">Turmas e Horários</a>
         <a href="valores.html">Valores</a>
         <a href="como-chegar.html">Como Chegar</a>
