--- a/linhagem.html
+++ b/linhagem.html
@@ -44,7 +44,7 @@
     <nav id="side-menu" class="side-menu">
         <a href="index.html">Início</a>
         <a href="linhagem.html" class="active">Linhagem</a>
-        <a href="equipe.html">Equipe</a>
+        <a href="equipe.html">Sobre a SZABJJ</a>
         <a href="turmas.html">Turmas e Horários</a>
         <a href="valores.html">Valores</a>
         <a href="como-chegar.html">Como Chegar</a>
