--- a/valores.html
+++ b/valores.html
@@ -71,8 +71,11 @@
                 <li>Coordenação e equilíbrio</li>
                 <li>Melhora da forma física</li>
                 <li>Emagrece e tonifica</li>
-                <li><a href="blog.html#beneficios-criancas">Benefícios do Jiu-Jitsu para Crianças</a></li>
             </ul>
+
+<section>
+<a href="blog.html#beneficios-criancas" class="link-beneficios-infantil">Benefícios do Jiu-Jitsu para Crianças</a>
+</section>
 
             <p>Temos planos de:</p>
             <ul>
